<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_inicio">

    <fragment
        android:id="@+id/nav_inicio"
        android:name="com.linea.uno.applineav1.activities.ui.Inicio.HomeFragment"
        android:label="@string/menu_inicio"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_movimientos"
        android:name="com.linea.uno.applineav1.activities.ui.Movimientos.MovimientoFragment"
        android:label="@string/menu_movimientos"
        tools:layout="@layout/fragment_movimiento" />

    <fragment
        android:id="@+id/nav_perfil"
        android:name="com.linea.uno.applineav1.activities.ui.Perfil.MiPerfilFragment"
        android:label="@string/menu_perfil"
        tools:layout="@layout/fragment_perfil" />

</navigation>