<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_margin="5dp"
    tools:context=".activities.CardActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp">

            <LinearLayout
                android:id="@+id/linear_titulo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="60dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:fontFamily="@font/san_francisco"
                    android:text="@string/registrar_tarjeta"
                    android:textAlignment="center"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                    android:textSize="34sp"
                    android:textStyle="bold"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@+id/linear_titulo"
                android:layout_marginTop="10dp"
                android:orientation="vertical">
                <LinearLayout
                    android:id="@+id/linear_lottie"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@+id/linear_titulo"
                    android:orientation="vertical">

                    <com.airbnb.lottie.LottieAnimationView
                        android:id="@+id/animationView"
                        android:layout_width="match_parent"
                        android:layout_height="160dp"
                        android:layout_gravity="center"
                        app:lottie_autoPlay="true"
                        app:lottie_loop="true"
                        app:lottie_rawRes="@raw/visa_card" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/linearLayout1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:orientation="horizontal">

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/txtInputCardNumber"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:hint="@string/ingrese_n_mero_de_tarjeta"
                        app:startIconDrawable="@drawable/ic_documento">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/txt_cardnumber"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/san_francisco"
                            android:textSize="15sp"
                            android:ems="10"
                            android:inputType="number"
                            android:maxLength="16"
                            android:selectAllOnFocus="false" />
                    </com.google.android.material.textfield.TextInputLayout>
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/linearLayout2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:orientation="horizontal"
                    app:layout_constraintTop_toBottomOf="@+id/linearLayout1">

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/txtInputMonth"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="10dp"
                        android:layout_weight="1"
                        android:hint="@string/month"
                        app:startIconDrawable="@drawable/ic_baseline_calendar_month_24">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/txt_month"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/san_francisco"
                            android:ems="10"
                            android:inputType="number"
                            android:maxLength="2"
                            android:textSize="15sp" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/txtInputYear"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:hint="@string/year"
                        app:startIconDrawable="@drawable/ic_baseline_calendar_month_24">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/txt_year"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/san_francisco"
                            android:ems="10"
                            android:layout_marginEnd="9dp"
                            android:inputType="number"
                            android:maxLength="2"
                            android:textSize="15sp" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/txtInputCCV"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:hint="@string/ccv"
                        app:startIconDrawable="@drawable/ic_documento">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/txt_cvv"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/san_francisco"
                            android:ems="10"
                            android:inputType="number"
                            android:maxLength="2"
                            android:textSize="15sp" />
                    </com.google.android.material.textfield.TextInputLayout>
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/linearLayout3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:orientation="horizontal"
                    app:layout_constraintTop_toBottomOf="@+id/linearLayout2">

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/txtInputEmailUser"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/ingrese_correo_electr_nico"
                        app:startIconDrawable="@drawable/ic_email">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/txt_email"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/san_francisco"
                            android:ems="10"
                            android:inputType="textEmailAddress"
                            android:textSize="15sp" />
                    </com.google.android.material.textfield.TextInputLayout>
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/linearLayout5"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:orientation="horizontal"
                    app:layout_constraintTop_toBottomOf="@+id/linearLayout4">

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/btn_registerCard"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="end"
                        android:layout_marginTop="5dp"
                        android:fontFamily="@font/san_francisco"
                        android:text="@string/registrar_tarjeta_btn"
                        android:textColor="@color/white" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/linearLayout6"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="2dp"
                    android:orientation="horizontal"
                    app:layout_constraintTop_toBottomOf="@+id/linearLayout5">

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/btnCancelarTarjeta"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="end"
                        android:layout_marginTop="5dp"
                        android:fontFamily="@font/san_francisco"
                        android:text="@string/cancelar_Card"
                        android:textColor="@color/black"
                        app:backgroundTint="#F5F5F5F5"
                        app:elevation="0dp" />
                </LinearLayout>
                <TextView
                    android:id="@+id/kind_card"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="18sp"
                    android:visibility="invisible"
                    app:layout_constraintTop_toBottomOf="parent" />

                <TextView
                    android:id="@+id/token_id"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="18sp"
                    android:visibility="invisible"
                    app:layout_constraintTop_toBottomOf="@+id/kind_card" />
            </LinearLayout>
        </RelativeLayout>
    </ScrollView>
</LinearLayout>